[package]
name = "unicode_escape"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/blvess/unicode_escape"
description = "A Rust crate for decoding escape sequences in strings."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
